# purescript-simple-chat-client

./: .gitignore  LICENSE  README.md  bower.json
server/: .gitignore  README.md  simple-chat-server.cabal
server/src/: Server.lhs
src/: Main.js  Main.purs
