name:                simple-chat-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/simple-chat-server#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Server
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , text
  default-language:    Haskell2010

executable simple-chat-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-chat-server
  default-language:    Haskell2010

test-suite simple-chat-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-chat-server
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple-chat-server
